[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Server"
version = "0.1.0"
description = "a general purpose starting point for a multiprocessing server application"
packages = [{ include = "Server" }]
license = "MIT"
readme = "README.md"